--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
     "next": "12.0.3",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recharts": "^2.1.6"
   },
   "devDependencies": {
     "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "12.0.3"
   }
 }
