--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "@mui/utils": "^5.1.1",
     "next": "12.0.3",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
