--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.0",
     "@mui/utils": "^5.1.1",
+    "csv-parser": "^3.0.0",
     "next": "12.0.3",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
