--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/utils": "^5.1.1",
     "axios": "^0.24.0",
     "csv-parser": "^3.0.0",
+    "moment": "^2.29.1",
     "next": "12.0.3",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
