--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "csv-parser": "^3.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "next": "12.0.3",
+    "next": "^12.1.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
