--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "extends": [
         "airbnb-base",
-        "next/core-web-vitals"
+        "next/core-web-vitals",
+        "plugin:cypress/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 12,
