--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
@@ -26,8 +27,10 @@
     "recharts": "^2.1.6"
   },
   "devDependencies": {
+    "cypress": "^12.6.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "12.0.3",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
